theme and home nav

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="login">Login</string>
     <string name="successful_registration">Successful Registration</string>
     <string name="nyumbyte">NyumByte</string>
+    <string name="nyumbyte_home">NyumByte Home</string>
+    <string name="diet_plans">Diet Plans</string>
 </resources>
