Update FriendsPage Working, Challenge Page not yet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="diet_plans">Diet Plans</string>
     <string name="create_diet_plan">Create Diet Plan</string>
     <string name="diet_plan_result">Diet Plan Result</string>
+    <string name="challenge_page">Challenge Page\n</string>
+    <string name="social">Social Page</string>
 </resources>
