--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="diet_plan_result">Diet Plan Result</string>
     <string name="challenge_page">Challenge Page\n</string>
     <string name="social">Social Page</string>
+    <string name="rewards_page">Reward Page\n</string>
 </resources>
