--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="my_diet_plan">My Diet Plan</string>
     <string name="new_diet_plan">New Diet Plan</string>
     <string name="broco">Broco</string>
+    <string name="profile">Profile</string>
 </resources>
